@@ -50,6 +50,7 @@ REGEDIT4
 "*.java"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.idl"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.pidl"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
+"*.cidl"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.html"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.sh"="svn:eol-style=native;svn:keywords=Author Date Id Revision;svn:executable"
 "*.py"="svn:eol-style=native;svn:keywords=Author Date Id Revision;svn:executable"
@@ -58,6 +59,8 @@ REGEDIT4
 "*.mpb"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.mpt"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.cdp"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
+"*.pcd"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
+"*.cdd"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.xsd"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.txt"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
 "*.am"="svn:eol-style=native;svn:keywords=Author Date Id Revision"
